<?xml version="1.0"?>
<package format="2">
  <name>mrobot_driver</name>
  <version>0.0.1</version>
  <description> drivers implementation of mrobot for ROS</description>

  <license>LGPL</license>

  <maintainer email="adam.huang@mrobot.cn">Adam Huang</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mrobot_driver_msgs</exec_depend>
  <exec_depend>mrobot_can_power</exec_depend>
  <exec_depend>roscan</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
