<?xml version="1.0"?>
<package>
  <name>mrobot_driver_msgs</name>
  <version>0.0.1</version>

  <description>The mrobot_driver_msgs package</description>

  <maintainer email="adam.huang@mrobot.cn">Adam Huang</maintainer>

  <license>BSD</license>

  <author email="adam.huang@mrobot.cn">Adam Huang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
