<?xml version="1.0"?>
<package>
  <name>roscan</name>
  <version>0.0.1</version>
  <description>The roscan package</description>

  <maintainer email="adam.huang@mrobot.cn">Adam Huang</maintainer>

  <license>BSD</license>

  <author email="adam.huang@mrobot.cn">Adam Huang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mrobot_msgs</build_depend>
  <build_depend>can_interface</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mrobot_msgs</run_depend>
  <run_depend>can_interface</run_depend>

  <export>
<!--    <cpp lflags="-L./include/roscan/"/> -->
  </export>
</package>
