<?xml version="1.0"?>
<package>
  <name>sensors</name>
  <version>0.0.1</version>
  <description>The sensors package</description>

  <maintainer email="adam.huang@mrobot.cn">Adam Huang</maintainer>

  <license>PRIVATE</license>

  <author email="adam.huang@mrobot.cn">Adam Huang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mrobot_driver_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mrobot_driver_msgs</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
