<?xml version="1.0"?>
<package>
  <name>can_sub_powerboard</name>
  <version>0.0.1</version>
  <description>The can_sub_powerboard package</description>

  <maintainer email="adam.huangt@mrobot.cn">Adam Huang</maintainer>

  <license>LGPL</license>

  <author email="adam.huang@mrobot.cn">Adam Huang</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mrobot_driver_msgs</build_depend>
  <build_depend>roscan</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mrobot_driver_msgs</run_depend>
  <run_depend>roscan</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
